hope is what keeps you going